Added entities, repositories